Revision history for Test-Timer

# $Id: Changes,v 1.3 2007-03-08 21:40:40 jonasbn Exp $

0.02

- Added some more tests, to get better coverage

- Updated some POD

- Fixed bug in Test::Timer, with alarm being scoped using my, should
  be our, pointed out by Paul Evans

- Ran all code through perltidy


0.01    Thu Mar  1 13:02:04 CET 2007
        First version, released on an unsuspecting world.
