@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Komodo Project File - DO NOT EDIT -->
 <project id="7a223e76-ff72-dd42-8206-ad45d18d6d07" name="Test-Timer.kpf" kpf_version="3">
-<preference-set idref="7a223e76-ff72-dd42-8206-ad45d18d6d07">
-  <string id="import_type">useFolders</string>
-  <string id="import_exclude_matches">*.*~;*.bak;*.tmp;CVS;.#*;*.pyo;*.pyc;.svn;*%*;_build;blib;cover_db;Build;.DS_Store</string>
-  <string id="import_include_matches"></string>
-  <boolean id="import_recursive">1</boolean>
-  <boolean id="import_live">1</boolean>
-</preference-set>
-<preference-set idref="7a223e76-ff72-dd42-8206-ad45d18d6d07/t/_benchmark.t">
+<preference-set idref="7a223e76-ff72-dd42-8206-ad45d18d6d07/t/time_nok.t">
   <string id="lastInvocation">default</string>
 <preference-set id="Invocations">
 <preference-set id="default">
@@ -17,17 +10,51 @@
   <string id="warnings">enabled</string>
   <boolean id="use-console">0</boolean>
   <string id="getparams"></string>
-  <string relative="path" id="filename">t/_benchmark.t</string>
+  <string relative="path" id="filename">t/time_nok.t</string>
   <string id="mpostparams"></string>
   <boolean id="show-dialog">1</boolean>
   <string id="userCGIEnvironment"></string>
   <string id="request-method">GET</string>
   <string id="params"></string>
-  <string id="executable-params"></string>
+  <string id="executable-params">-I /Users/jonasbn/develop/cvs-logicLAB/modules/Test-Timer/blib/lib</string>
   <string id="posttype">application/x-www-form-urlencoded</string>
   <string id="documentRoot"></string>
   <string id="cookieparams"></string>
   <string id="userEnvironment"></string>
+  <boolean id="sim-cgi">0</boolean>
+  <string id="cwd"></string>
+  <long id="debugger.io-port">9011</long>
+</preference-set>
+</preference-set>
+</preference-set>
+<preference-set idref="7a223e76-ff72-dd42-8206-ad45d18d6d07">
+  <string id="import_exclude_matches">*.*~;*.bak;*.tmp;CVS;.#*;*.pyo;*.pyc;.svn;*%*;_build;blib;cover_db;Build;.DS_Store</string>
+  <boolean id="import_recursive">1</boolean>
+  <string relative="path" id="perlExtraPaths">lib:/Users/jonasbn/develop/cvs-logicLAB/modules/Test-Timer/blib/lib</string>
+  <boolean id="import_live">1</boolean>
+  <string id="import_type">useFolders</string>
+  <string id="import_include_matches"></string>
+</preference-set>
+<preference-set idref="7a223e76-ff72-dd42-8206-ad45d18d6d07/t/time_between.t">
+  <string id="lastInvocation">default</string>
+<preference-set id="Invocations">
+<preference-set id="default">
+  <string id="postparams"></string>
+  <string id="userEnvironment"></string>
+  <string id="posttype">application/x-www-form-urlencoded</string>
+  <string id="language">Perl</string>
+  <string id="getparams"></string>
+  <boolean id="use-console">0</boolean>
+  <string id="warnings">enabled</string>
+  <string id="mpostparams"></string>
+  <string relative="path" id="filename">t/time_between.t</string>
+  <string id="request-method">GET</string>
+  <string id="params"></string>
+  <string id="userCGIEnvironment"></string>
+  <string id="executable-params">-I /Users/jonasbn/develop/cvs-logicLAB/modules/Test-Timer/lib</string>
+  <string id="documentRoot"></string>
+  <string id="cookieparams"></string>
+  <boolean id="show-dialog">1</boolean>
   <boolean id="sim-cgi">0</boolean>
   <string id="cwd"></string>
   <long id="debugger.io-port">9011</long>
