@@ -1,4 +1,4 @@
-# $Id: time_between.t,v 1.2 2007-03-08 19:40:24 jonasbn Exp $
+# $Id: time_between.t,v 1.3 2007-03-10 19:29:39 jonasbn Exp $
 
 use strict;
 use Test::More tests => 3;
@@ -8,3 +8,4 @@ BEGIN { use_ok('Test::Timer'); }
 time_between( sub { sleep(1); }, 0, 2, 'Passing test' );
 
 time_between( sub { sleep(5); }, 4, 6, 'Passing test' );
+
